[tool.poetry]
name = "chatgptcode"
version = "0.1.0"
description = "A command line tool for interacting with ChatGPT to help with development"
authors = ["Brian Moody <brian.k.moody@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
revChatGPT = "^0.3.1"
twocaptcha = "^0.0.1"
termcolor = "^2.2.0"
pygments = "^2.14.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
